--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "12.18.2"
+  },
   "bugs": {
     "url": "https://github.com/kb-techiepilot/tvalert/issues"
   },
